# deribit-api-clients

./: README.md
android/: README.md
android/docs/: AccountManagementApi.md  AddressBookItem.md  AuthenticationApi.md  BookSummary.md  Currency.md  CurrencyPortfolio.md  CurrencyWithdrawalPriorities.md  Deposit.md  Instrument.md  InternalApi.md  KeyNumberPair.md  MarketDataApi.md  Order.md  OrderIdInitialMarginPair.md  Portfolio.md  PortfolioEth.md  Position.md  PrivateApi.md  PublicApi.md  PublicTrade.md  SessionManagementApi.md  Settlement.md  SubscriptionManagementApi.md  SupportingApi.md  TradesVolumes.md  TradingApi.md  TransferItem.md  Types.md  UserTrade.md  WalletApi.md  WebsocketOnlyApi.md  Withdrawal.md
aspnetcore/: Org.OpenAPITools.sln  README.md
c/: CMakeLists.txt  README.md
c/api/: AuthenticationAPI.c  AuthenticationAPI.h  PrivateAPI.c  PrivateAPI.h  PublicAPI.c  PublicAPI.h  SessionManagementAPI.c  SessionManagementAPI.h  SubscriptionManagementAPI.c  SubscriptionManagementAPI.h  SupportingAPI.c  SupportingAPI.h  WebsocketOnlyAPI.c  WebsocketOnlyAPI.h
c/model/: address_book_item.c  address_book_item.h  book_summary.c  book_summary.h  currency.c  currency.h  currency_portfolio.c  currency_portfolio.h  currency_withdrawal_priorities.c  currency_withdrawal_priorities.h  deposit.c  deposit.h  instrument.c  instrument.h  key_number_pair.c  key_number_pair.h  order.c  order.h  order_id_initial_margin_pair.c  order_id_initial_margin_pair.h  portfolio.c  portfolio.h  portfolio_eth.c  portfolio_eth.h  position.c  position.h  public_trade.c  public_trade.h  settlement.c  settlement.h  trades_volumes.c  trades_volumes.h  transfer_item.c  transfer_item.h  types.c  types.h  user_trade.c  user_trade.h  withdrawal.c  withdrawal.h
c/src/: apiClient.c
clojure/: project.clj
cpp-qt5-client/client/: OAIAccountManagementApi.cpp  OAIAccountManagementApi.h  OAIAddress_book_item.cpp  OAIAddress_book_item.h  OAIAuthenticationApi.cpp  OAIAuthenticationApi.h  OAIBook_summary.cpp  OAIBook_summary.h  OAICurrency.cpp  OAICurrency.h  OAICurrency_portfolio.cpp  OAICurrency_portfolio.h  (+59 more)
cpp-restsdk/: ApiClient.cpp  ApiClient.h  ApiConfiguration.cpp  ApiConfiguration.h  ApiException.cpp  ApiException.h  CMakeLists.txt  HttpContent.cpp  HttpContent.h  IHttpBody.h  JsonBody.cpp  JsonBody.h  ModelBase.cpp  ModelBase.h  MultipartFormData.cpp  MultipartFormData.h  Object.cpp  Object.h  README.md
csharp/: .gitignore  Org.OpenAPITools.sln  README.md
go/: README.md  api_account_management.go  api_authentication.go  api_internal.go  api_market_data.go  api_private.go  api_public.go  api_session_management.go  api_subscription_management.go  api_supporting.go  api_trading.go  api_wallet.go  api_websocket_only.go  client.go  configuration.go  model_address_book_item.go  model_book_summary.go  model_currency.go  model_currency_portfolio.go  model_currency_withdrawal_priorities.go  model_deposit.go  model_instrument.go  model_key_number_pair.go  model_order.go  model_order_id_initial_margin_pair.go  model_portfolio.go  model_portfolio_eth.go  model_position.go  model_public_trade.go  model_settlement.go  model_trades_volumes.go  model_transfer_item.go  model_types.go  model_user_trade.go  model_withdrawal.go  response.go
java/: README.md  build.gradle  build.sbt  pom.xml
javascript/: README.md  package.json
kotlin/: README.md
objc/: OpenAPIClient.podspec  README.md
php/: README.md  composer.json
r/: DESCRIPTION  NAMESPACE  README.md
ruby/: README.md  openapi_client.gemspec
scala-akka/: README.md  build.sbt  pom.xml
swift4/: OpenAPIClient.podspec  README.md
(+1176 files in other folders)
